MODRTACHCE-8: Add RtacHolding mapper from Holding, Piece, Item